[package]
name = "SMTileViewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sdl2 = { version = "0.35.2", features = ["ttf"] }
strum = "0.22"
strum_macros = "0.22"
websocket = "0.26.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
scan_fmt = "0.2.6"
lazy_static = "1.4.0"